@@ -8,6 +8,19 @@
             <field name="name">plan_form</field>
         </record>
         <!-- ############################################################ -->
+        <!-- ########### Plan lines ########### -->
+        <!-- ############################################################ -->
+        <record model="ir.ui.view" id="plan_line_view_form">
+            <field name="model">commission.plan.line</field>
+            <field name="inherit" ref="commission.plan_line_view_form"/>
+            <field name="name">plan_line_form</field>
+        </record>
+        <record model="ir.ui.view" id="plan_line_view_list">
+            <field name="model">commission.plan.line</field>
+            <field name="inherit" ref="commission.plan_line_view_list"/>
+            <field name="name">plan_line_list</field>
+        </record>
+        <!-- ############################################################ -->
         <!-- ########### Payment Rule view ########### -->
         <!-- ############################################################ -->
         <record model="ir.ui.view" id="prepayment_payment_rule_view_form">
