@@ -1,2 +1,4 @@
+- **Pramétrage du montant du précompte via le moteur de règle**
+
 - **Paramétrage via le moteur de règle de l'échéancier de versement du
 précompte:**
