@@ -1,4 +1,5 @@
 Ce module étend le module ``commission_prepayment`` pour permettre
 l'utilisation du moteur de règle pour paramétrer certaines règles du précompte.
 
+- Paramétrage du montant de précompte via le moteur de règle
 - Paramétrage via le moteur de règle de l'échéancier de versement du précompte
