@@ -1,0 +1,19 @@
+from trytond.pool import PoolMeta
+
+from trytond.modules.rule_engine import check_args
+
+__metaclass__ = PoolMeta
+__all__ = [
+    'RuleEngineRuntime',
+    ]
+
+
+class RuleEngineRuntime:
+    __name__ = 'rule_engine.runtime'
+
+    @classmethod
+    @check_args('option')
+    def _re_option_first_year_premium(cls, args):
+        option = args['option']
+        if option:
+            return option.first_year_premium
