@@ -3,7 +3,10 @@ depends:
     ir
     res
     cog_utils
+    commission_insurance_rule_engine
     commission_insurance_prepayment
     rule_engine
 xml:
     commission.xml
+    rule_engine.xml
+    rule_template.xml
