@@ -1,2 +1,4 @@
+* Allow to define prepayment amount with the rule engine
+
 Version 1.4 - 2015-05-29
 * Module creation
